Changed names of pages and added a hyperlink to local dialogue

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Anticiper</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Créer</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Rayonner</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#anticiper">Anticiper</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#creer">Créer</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#rayonner">Rayonner</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Recommandations</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Nous contacter</a></li>
                     </ul>
@@ -41,11 +41,11 @@
             <div class="container">
                 <div class="masthead-heading text-uppercase">Dialogues Quantiques</div>
                 <div class="masthead-subheading">Anticiper, créer et rayonner pour l'innovation et la recherche responsable</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="présentation projet et partenaires.html">En savoir plus sur le projet</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="projet_partenaires.html">En savoir plus sur le projet</a>
             </div>
         </header>
-        <!-- Services-->
-        <section class="page-section" id="services">
+        <!-- anticiper-->
+        <section class="page-section" id="anticiper">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Anticiper</h2>
@@ -54,8 +54,10 @@
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-users fa-stack-1x fa-inverse"></i> <!-- Groupe de personnes -->
+                            <a href="dialogue_local.html">
+                                <i class="fas fa-circle fa-stack-2x text-primary" href="dialogue_local.html"></i>
+                                <i class="fas fa-users fa-stack-1x fa-inverse"></i> <!-- Groupe de personnes -->
+                            </a>
                         </span>
                         <h4 class="my-3">Rencontres locales</h4>
                         <p class="text-muted">Rencontres ancrées dans la zone d’innovation quantique de Sherbrooke, où acteurs régionaux explorent ensemble les dimensions sociales, éthiques et environnementales des technologies quantiques.</p>
@@ -79,8 +81,8 @@
                 </div>
             </div>
         </section>
-        <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="portfolio">
+        <!-- creer Grid-->
+        <section class="page-section bg-light" id="creer">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Créer</h2>
@@ -180,8 +182,8 @@
                 </div>
             </div>
         </section>
-        <!-- About-->
-        <section class="page-section" id="about">
+        <!-- rayonner-->
+        <section class="page-section" id="rayonner">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Rayonner</h2>
