--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <div class="container">
                 <div class="masthead-heading text-uppercase">Dialogues Quantiques</div>
                 <div class="masthead-subheading">Anticiper, créer et rayonner pour l'innovation et la recherche responsable</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="projet_partenaires.html">En savoir plus sur le projet</a>
+                <p class="large"> Réunissant chercheurs, entreprises et société civile, nous réfléchissons ensemble aux enjeux liés au développement des technologies quantiques. Il s'agit d'ouvrir des espaces de dialogue pluridisciplinaire et inclusif pour <em><strong>anticiper</strong></em>  les transformations liées au développement des technologies quantiques, de <em><strong>créer</strong></em>  des mesures concrêtes pour soutenir l'innovation responsable et de faire <em><strong>rayonner</strong></em>  les connaissances par la vulgarisation et la diffusion.   
+                </p>
             </div>
         </header>
         <!-- anticiper-->
