ajout de la page "créer"

--- a/anticiper.html
+++ b/anticiper.html
@@ -17,12 +17,24 @@
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body id="page-top">
+
+
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">DIALOGUES QUANTIQUES</a>
-            <div class="navbar-nav ms-auto py-4 py-lg-0">
-                <a class="nav-link text-uppercase" href="index.html">Retour au menu principal</a>
+            <a class="navbar-brand" href="index.html" >Dialogues Quantiques</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars ms-1"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="#anticiper">Anticiper</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#creer">Créer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#rayonner">Rayonner</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#recomandations">Recommandations</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Nous contacter</a></li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -30,8 +42,8 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
-            <div class="masthead-heading text-uppercase">En savoir plus sur le projet</div>
-            <div class="masthead-subheading">Objectifs du projet, équipe de recherche et partenaires</div>
+            <div class="masthead-heading text-uppercase">Anticiper</div>
+            <div class="masthead-subheading">Dialoguer pour anticiper les effets sociaux, éthiques et environnementaux des technologies quantiques en créant des espaces d’échange inclusifs et réguliers.</div>
         </div>
     </header>
         
@@ -42,32 +54,32 @@
             <div class="col-lg-4 col-md-6 mb-4">
                 <span class="fa-stack fa-4x">
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fas fa-search fa-stack-1x fa-inverse"></i>
+                    <i class="fas fa-users fa-stack-1x fa-inverse"></i>
                 </span>
                 <p class="text-muted mb-4">
-                    Découvrez les objectifs du projet Dialogues Quantiques.
+                    Dialogue entre les acteurs industriels, politiques et de la société civile de la région de Sherbrooke
                 </p>
-                <a href="#objectifs" class="btn btn-outline-primary">Description du projet</a>
+                <a href="#objectifs" class="btn btn-outline-primary">Rencontres locales</a>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
                 <span class="fa-stack fa-4x">
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fas fa-user-friends fa-stack-1x fa-inverse"></i>
+                    <i class="fas fa-globe fa-stack-1x fa-inverse"></i>
                 </span>
                 <p class="text-muted mb-4">
-                    Rencontrez notre équipe de recherche multidisciplinaire.
+                    Dialogue entre les acteurs industriels, politiques, académiques et de la société civile à l'échelle du Canada.
                 </p>
-                <a href="#team" class="btn btn-outline-primary">Équipe de recherche</a>
+                <a href="#team" class="btn btn-outline-primary">Rencontres nationales</a>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
                 <span class="fa-stack fa-4x">
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fas fa-handshake fa-stack-1x fa-inverse"></i>
+                    <i class="fas fa-comments fa-stack-1x fa-inverse"></i>
                 </span>
                 <p class="text-muted mb-4">
-                    Prenez connaissance des partenaires impliqués dans le projet.
+                    Dialogue avec des professeurs universitaires, des étudiants et des professionnels
                 </p>
-                <a href="#partenaires" class="btn btn-outline-primary">Nos partenaires</a>
+                <a href="#partenaires" class="btn btn-outline-primary">Entrevues</a>
             </div>
         </div>
     </div>
