--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <li class="nav-item"><a class="nav-link" href="#anticiper">Anticiper</a></li>
                         <li class="nav-item"><a class="nav-link" href="#creer">Créer</a></li>
                         <li class="nav-item"><a class="nav-link" href="#rayonner">Rayonner</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Recommandations</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Nous contacter</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#recomandations">Recommandations</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#équipe">Équipe</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,48 +40,61 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">Dialogues Quantiques</div>
-                <div class="masthead-subheading">Anticiper, créer et rayonner pour le développement responsable des technologies quantiques</div>
+                <div class="masthead-subheading"><span style="color: #f5b400;">Anticiper</span>, <span style="color: #f5b400;">créer</span> et <span style="color: #f5b400;">rayonner</span> pour le développement <span style="color: #f5b400;">responsable</span> des technologies quantiques</div>
                 <p class="large"> Réunissant chercheurs, entreprises et société civile, nous réfléchissons ensemble aux enjeux liés au développement des technologies quantiques. Il s'agit d'ouvrir des espaces de dialogue pluridisciplinaire et inclusif pour <em><strong>anticiper</strong></em>  les transformations liées au développement des technologies quantiques, de <em><strong>créer</strong></em>  des mesures concrêtes pour soutenir l'innovation responsable et de faire <em><strong>rayonner</strong></em>  les connaissances par la vulgarisation et la diffusion.   
                 </p>
             </div>
         </header>
-        <!-- anticiper-->
-        <section class="page-section" id="anticiper">
+        <!-- anticiper -->
+        <section class="page-section bg-light" id="anticiper">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Anticiper</h2>
-                    <h3 class="section-subheading text-muted">ajouter une ou deux phrases qui expliquent le lien entre le dialogue et le fait d'anticiper ensemble le développement des TQ et leurs effets à différents niveaux. Pour cela nécessité de créer des espaces et des temps d'échange et de donner la parole à tout le monde (inclusif, etc.) </h3>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <a href="dialogue_local.html">
-                                <i class="fas fa-circle fa-stack-2x text-primary" href="dialogue_local.html"></i>
-                                <i class="fas fa-users fa-stack-1x fa-inverse"></i> <!-- Groupe de personnes -->
-                            </a>
-                        </span>
-                        <h4 class="my-3">Rencontres locales</h4>
-                        <p class="text-muted">Rencontres ancrées dans la zone d’innovation quantique de Sherbrooke, où acteurs régionaux explorent ensemble les dimensions sociales, éthiques et environnementales des technologies quantiques.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-globe fa-stack-1x fa-inverse"></i> <!-- Globe pour national -->
-                        </span>
-                        <h4 class="my-3">Rencontres nationales</h4>
-                        <p class="text-muted">problématique soulevée, rencontre X fois par années,format, représentants(...).</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lightbulb fa-stack-1x fa-inverse"></i> <!-- Ampoule pour idées/recommandations -->
-                        </span>
-                        <h4 class="my-3">Recommandations</h4>
-                        <p class="text-muted">à l'issue des rencontres locales et nationales, X rencommandations, à l'intention de X</p>
-                    </div>
-                </div>
+                <h2 class="section-heading text-uppercase">Anticiper</h2>
+                <p class="section-subheading text-muted mx-auto lead mw-640"> Dialoguer pour anticiper les effets sociaux, éthiques et environnementaux des technologies quantiques en créant des espaces d’échange inclusifs et réguliers. </p>
+
+                <!-- bouton vers la page dédiée -->
+                <a class="btn btn-primary btn-md rounded-pill shadow-sm mt-2"
+                    href="anticiper.html">
+                    En savoir plus <i class="fas fa-arrow-right ms-2"></i>
+                </a>
             </div>
+
+                <!-- cartes -->
+                    <div class="row gy-4 mt-5">
+                    <!-- Rencontres locales -->
+                        <div class="col-md-4 text-center">
+                            <div class="mb-3">
+                            <i class="fas fa-users fa-5x text-primary"></i>
+                            </div>
+                            <h4 class="my-3">Rencontres locales</h4>
+                            <p class="text-muted">
+                            Rencontres ancrées dans la zone d’innovation quantique de Sherbrooke, où acteurs régionaux explorent ensemble les dimensions sociales, éthiques et environnementales des technologies quantiques.
+                            </p>
+                        </div>
+            
+                    <!-- Rencontres nationales -->
+                        <div class="col-md-4 text-center">
+                            <div class="mb-3">
+                            <i class="fas fa-globe fa-5x text-primary"></i>
+                            </div>
+                            <h4 class="my-3">Rencontres nationales</h4>
+                            <p class="text-muted">
+                            Événements récurrents réunissant des représentant·es de divers secteurs autour d’enjeux communs.
+                            </p>
+                        </div>
+                    
+                    <!-- Entrevues -->
+                        <div class="col-md-4 text-center">
+                            <div class="mb-3">
+                            <i class="fas fa-lightbulb fa-5x text-primary"></i>
+                            </div>
+                            <h4 class="my-3">Entrevues</h4>
+                            <p class="text-muted">
+                            Entretiens pour approfondir les points de vue et éclairer les recommandations.
+                            </p>
+                        </div>
         </section>
+
         <!-- creer Grid-->
         <section class="page-section bg-light" id="creer">
             <div class="container">
@@ -184,7 +197,7 @@
             </div>
         </section>
         <!-- rayonner-->
-        <section class="page-section" id="rayonner">
+        <section class="page-section bg-light" id="rayonner">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Rayonner</h2>
@@ -247,26 +260,72 @@
         </section>
 
         <!-- Clients-->
-        <div class="py-5">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/microsoft.svg" alt="..." aria-label="Microsoft Logo" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/google.svg" alt="..." aria-label="Google Logo" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/facebook.svg" alt="..." aria-label="Facebook Logo" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." aria-label="IBM Logo" /></a>
+        <section class="page-section bg-light" id="recommandations"></section>
+            <div class="py-5">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-md-3 col-sm-6 my-3">
+                            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/microsoft.svg" alt="..." aria-label="Microsoft Logo" /></a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 my-3">
+                            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/google.svg" alt="..." aria-label="Google Logo" /></a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 my-3">
+                            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/facebook.svg" alt="..." aria-label="Facebook Logo" /></a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 my-3">
+                            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." aria-label="IBM Logo" /></a>
+                        </div>
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- équipe-->
+    <section class="page-section bg-light" id="équipe">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Notre équipe de recherche</h2>
+                <h3 class="section-subheading text-muted">Présentation des membres de l'équipe de recherche</h3>
+            </div>
+            <div class="row">
+                <!-- Profil d'Elsa-->
+                <div class="col-lg-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/Elsa Paukovics 2022.jpg" alt="..." />
+                        <h4><a href="elsa-paukovics.html">Elsa Paukovics</a></h4>
+                        <p class="text-muted">Chercheure postdoctorale</p>
+                        <a class="btn btn-dark btn-social mx-2" href="https://orcid.org/0000-0002-3740-088X" aria-label="Elsa Paukovics ORCID Profile"><i class="fab fa-orcid"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/elsa-paukovics-45aa32a4/" aria-label="Elsa Paukovics LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
+                        <h4>Diana Petersen</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
+                        <h4>Larry Parker</h4>
+                        <p class="text-muted">Lead Developer</p>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+            </div>
         </div>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
+    </section>
+        <!-- formulaire de contact-->
+        <section class="page-section" id="équipe">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
