Ajout de contenu et modifications mineures_page anticiper

--- a/créer.html
+++ b/créer.html
@@ -29,11 +29,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#anticiper">Anticiper</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#anticiper">Anticiper</a></li>
                     <li class="nav-item"><a class="nav-link" href="#creer">Créer</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#rayonner">Rayonner</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#recomandations">Recommandations</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#équipe">équipe</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#rayonner">Rayonner</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#recomandations">Recommandations</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#equipe">équipe</a></li>
                 </ul>
             </div>
         </div>
@@ -133,7 +133,7 @@
     <section class="page-section bg-light" id="creer">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Créer</h2>
+                <h2 class="section-heading text-uppercase">Les prototypes</h2>
                 <h3 class="section-subheading text-muted">Ajouter une ou deux phrases qui expliquent le lien entre le dialogue et la création, ou plutôt la co-création, de mesures à mettre oeuvre</h3>
             </div>
             <div class="row">
