--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="#creer">Créer</a></li>
                         <li class="nav-item"><a class="nav-link" href="#rayonner">Rayonner</a></li>
                         <li class="nav-item"><a class="nav-link" href="#recomandations">Recommandations</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#équipe">Équipe</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#equipe">Équipe</a></li>
                     </ul>
                 </div>
             </div>
@@ -105,7 +105,7 @@
         </p>
   
         <!-- bouton vers la page dédiée -->
-        <a class="btn btn-primary btn-md rounded-pill shadow-sm mt-2" href="creer.html">
+        <a class="btn btn-primary btn-md rounded-pill shadow-sm mt-2" href="créer.html">
           En savoir plus <i class="fas fa-arrow-right ms-2"></i>
         </a>
       </div>
@@ -122,8 +122,8 @@
               <img class="img-fluid portfolio-thumb" src="assets/img/portfolio/Jouvence nature.jpg" alt="...">
             </a>
             <div class="portfolio-caption">
-              <div class="portfolio-caption-heading">Co-créer en s'inspirant des méthodes de pensée design</div>
-              <div class="portfolio-caption-subheading text-muted">Jouvence, 15-19 juin 2025</div>
+              <div class="portfolio-caption-heading">Jeu d'Aventure Interactif PNT (Position, navigation, timing)</div>
+              <div class="portfolio-caption-subheading text-muted">Prototype #1</div>
             </div>
           </div>
         </div>
@@ -139,7 +139,7 @@
             </a>
             <div class="portfolio-caption">
               <div class="portfolio-caption-heading">Cube d'innovation responsable quantique</div>
-              <div class="portfolio-caption-subheading text-muted">Prototype #1</div>
+              <div class="portfolio-caption-subheading text-muted">Prototype #2</div>
             </div>
           </div>
         </div>
@@ -155,7 +155,7 @@
             </a>
             <div class="portfolio-caption">
               <div class="portfolio-caption-heading">Finish</div>
-              <div class="portfolio-caption-subheading text-muted">Identity</div>
+              <div class="portfolio-caption-subheading text-muted">Prototype #3</div>
             </div>
           </div>
         </div>
